--- a/html/party/letter-register-input.html
+++ b/html/party/letter-register-input.html
@@ -25,10 +25,19 @@
         input{
             width:90%;
             background-color: #F4F4F4;
+            border: 0px;
+        }
+        button{
+            border: 0px;
         }
     </style>
 </head>
 <body class="">
+<div class="top-div">
+    <div class="sl-flex-row-center-space-between sl-background-color-red top-info sl-font-color-white" >
+        <a href="party.html" onclick="destroyValidator()"><i class="am-icon-angle-left am-icon-sm" style="margin-left: 0.5rem;color: white;"></i></a>
+    </div>
+</div>
 <div style="margin-top: 3rem;">
     <form id="letterRegister" class="smart-form" novalidate="novalidate" action="" method="post">
         <fieldset>
