--- a/html/party/party.html
+++ b/html/party/party.html
@@ -129,7 +129,7 @@
          id="">
         <ul class="am-navbar-nav am-cf am-avg-sm-5" >
             <li >
-                <a href="" class="">
+                <a href="../main.html" class="">
                     <span class="am-icon-home"></span>
                     <span class="am-navbar-label">主页</span>
                 </a>
