--- a/html/test/a.html
+++ b/html/test/a.html
@@ -12,80 +12,42 @@
 <script src="../../assets/js/jquery.min.js"></script>
 <script src="../../assets/js/amazeui.js"></script>
 <script src="../../assets/js/myFirst.js"></script>
-<form action="" class="am-form" id="doc-vld-msg">
-    <fieldset>
-        <legend>显示验证提示信息</legend>
-        <div class="am-form-group">
-            <label for="doc-vld-name-2-1">用户名：</label>
-            <input type="text" id="doc-vld-name-2-1" minlength="3" placeholder="输入用户名（至少 3 个字符）" name="userName" required/>
+<div class="am-panel-group" id="accordion">
+    <div class="am-panel am-panel-default">
+        <div class="am-panel-hd">
+            <h4 class="am-panel-title" data-am-collapse="{parent: '#accordion', target: '#do-not-say-1'}">
+                审批意见
+            </h4>
         </div>
+        <div id="do-not-say-1" class="am-panel-collapse am-collapse am-in">
+            <div class="am-panel-bd">
+                <textarea rows="5" cols="30" placeholder="请填写审批意见">
 
-        <!--<div class="am-form-group">-->
-            <!--<label for="doc-vld-email-2-1">邮箱：</label>-->
-            <!--<input type="email" id="doc-vld-email-2-1" data-validation-message="自定义提示信息：输入地球上的电子邮箱撒" placeholder="输入邮箱" required/>-->
-        <!--</div>-->
-
-        <!--<div class="am-form-group">-->
-            <!--<label for="doc-vld-url-2-1">网址：</label>-->
-            <!--<input type="url" id="doc-vld-url-2-1" placeholder="输入网址" required/>-->
-        <!--</div>-->
-
-        <div class="am-form-group">
-            <label for="doc-vld-age-2-1">年龄：</label>
-            <input type="number" class=""  id="doc-vld-age-2-1" placeholder="输入年龄  18-120" name="age" min="18" max="120" required />
+                </textarea>
+            </div>
         </div>
+    </div>
 
-
-
-        <!--<div class="am-form-group">-->
-            <!--<label>性别： </label>-->
-            <!--<label class="am-radio-inline">-->
-                <!--<input type="radio"  value="" name="docVlGender" required> 男-->
-            <!--</label>-->
-            <!--<label class="am-radio-inline">-->
-                <!--<input type="radio" name="docVlGender"> 女-->
-            <!--</label>-->
-            <!--<label class="am-radio-inline">-->
-                <!--<input type="radio" name="docVlGender"> 其他-->
-            <!--</label>-->
-        <!--</div>-->
-
-
-        <div class="am-form-group">
-            <label for="doc-vld-ta-2-1">评论：</label>
-            <textarea id="doc-vld-ta-2-1" minlength="10" maxlength="100"></textarea>
+    <div class="am-panel am-panel-default">
+        <div class="am-panel-hd">
+            <h4 class="am-panel-title" data-am-collapse="{parent: '#accordion', target: '#do-not-say-2'}">
+                莫言 - 你不懂我，我不怪你 #2
+            </h4>
         </div>
-
-        <button class="am-btn am-btn-secondary" type="submit">提交</button>
-    </fieldset>
-</form>
-<script>
-    $(function() {
-        $('#doc-vld-msg').validator({
-            onValid: function(validity) {
-                alert("val:"+validity.field);
-                $(validity.field).closest('.am-form-group').find('.am-alert').hide();
-
-            },
-
-            onInValid: function(validity) {
-                alert("onIn:"+validity.field.nodeName);
-//                alert(typeof validity.field +","+ typeof validity);
-                var $field = $(validity.field);
-                var $group = $field.closest('.am-form-group');
-                var $alert = $group.find('.am-alert');
-                // 使用自定义的提示信息 或 插件内置的提示信息
-                var msg = $field.data('validationMessage') || this.getValidationMessage(validity);
-
-                if (!$alert.length) {
-                    $alert = $('<div class="am-alert am-alert-danger"></div>').hide().
-                    appendTo($group);
-                }
-
-                $alert.html(msg).show();
-            }
-        });
-    });
-</script>
+        <div id="do-not-say-2" class="am-panel-collapse am-collapse">
+            <div class="am-panel-bd">
+                <p>               每个人都有一场爱恋， 用心、用情、用力，感动也感伤。                </p>
+                <p>               我把最炙热的心情 藏在那里。</p>
+                <p>               你不懂我，我不怪你。
+                <p>               每个人都有 一行眼泪， 喝下的冰冷的水，酝酿成的热泪。</p>
+                <p>               我把最心酸的委屈汇在那里。</p>
+                <p>               你不懂我，我不怪你。</p>
+                <p>               每个人都有一段告白， 忐忑、不安，却饱含真心和勇气。</p>
+                <p>               我把最抒情的语言用在那里。</p>
+                <p>               你不懂我，我不怪你。</p>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
