--- a/html/my.html
+++ b/html/my.html
@@ -60,7 +60,7 @@
      id="">
     <ul class=" am-navbar-nav am-cf am-avg-sm-5 ">
         <li >
-            <a href="main.html" class="">
+            <a href="main/main.html" class="">
                 <i class="am-icon-home  sl-icon-color-6D6D6D"></i>
                 <span class="am-navbar-label  sl-icon-color-6D6D6D">主页</span>
             </a>
