--- a/html/my_no_login.html
+++ b/html/my_no_login.html
@@ -203,7 +203,7 @@
      id="">
     <ul class=" am-navbar-nav am-cf am-avg-sm-4 ">
         <li >
-            <a href="main.html" class="">
+            <a href="main/main.html" class="">
                 <i class="am-icon-home  sl-icon-color-6D6D6D"></i>
                 <span class="am-navbar-label  sl-icon-color-6D6D6D">推荐</span>
             </a>
