--- a/html/newLayout/link-man.html
+++ b/html/newLayout/link-man.html
@@ -49,129 +49,117 @@
 </head>
 <body onselect="alert('You have selected some of the text.')" >
 
-        <!--头信息-->
-    <div class="top-div">
-        <div class="sl-flex-row-center-center sl-background-color-red top-info sl-font-color-white" >
-            <!--<i class="am-icon-angle-left" style="margin-left: 0.5rem;" onclick="topNav()"></i>-->
-            <div class="sl-margin-left-1rem title" ><span>党务管理</span></div>
-            <!--<div class="sl-flex-row-center-flex-end">-->
-                <!--<div class="sl-margin-right-1rem">发布</div>-->
-                <!--<div class="sl-margin-right-1rem">存为草稿</div>-->
-            <!--</div>-->
-        </div>
+<!--头信息-->
+<div class="top-div">
+    <div class="sl-flex-row-center-center sl-background-color-red top-info sl-font-color-white" >
+        <!--<i class="am-icon-angle-left" style="margin-left: 0.5rem;" onclick="topNav()"></i>-->
+        <div class="sl-margin-left-1rem title" ><span>党务管理</span></div>
+        <!--<div class="sl-flex-row-center-flex-end">-->
+        <!--<div class="sl-margin-right-1rem">发布</div>-->
+        <!--<div class="sl-margin-right-1rem">存为草稿</div>-->
+        <!--</div>-->
     </div>
-    <ul class="am-list am-list-static am-list-border" style="margin-top: 3rem;">
-        <li class="active " >
-            <a href="#" title="三重一大">
-                <i class="am-icon-balance-scale"></i>
-                <span eng="strong-big">三重一大</span>
+</div>
+<ul class="am-list am-list-static am-list-border" style="margin-top: 3rem;">
+    <li class="active " >
+        <a href="#" title="三重一大">
+            <i class="am-icon-balance-scale"></i>
+            <span eng="strong-big">三重一大</span>
+        </a>
+    </li>
+    <li >
+        <a href="#" title="干部选拔">
+            <i class="am-icon-child"></i>
+            <span eng="selection-apply">干部选拔</span>
+        </a>
+    </li>
+    <li>
+        <a href="#" title="活动管理">
+            <i class="am-icon-futbol-o"></i>
+            <span eng="activity-manager">活动管理</span>
+        </a>
+    </li>
+    <li>
+        <a href="#" title="党费管理" style="display: flex;" class="sl-flex-row-center-space-between">
+            <div>
+                <i class="am-icon-cny"></i>
+                <span eng="money-manager">党费管理</span>
+            </div>
+            <b>
+                <em class="am-icon-plus-square-o"></em>
+            </b>
+        </a>
+
+    </li>
+
+    <li style="display: none;" class="hidden-money small-font">
+        <a href="#" title="党费缴纳">
+            <span eng="strong-big">党费缴纳</span>
+        </a>
+    </li>
+    <li style="display: none;" class="hidden-money small-font">
+        <a href="#" title="党费分摊">
+            <span eng="money-avg">党费分摊</span>
+        </a>
+    </li>
+    <li style="display: none;" class="hidden-money small-font">
+        <a href="#" title="党费可支配情况">
+            <span>党费可支配情况</span>
+        </a>
+    </li>
+    <li>
+        <a href="#" title="退管会管理" style="display: flex;" class="sl-flex-row-center-space-between">
+            <div>
+                <i class="am-icon-suitcase"></i>
+                <span >退管会管理</span>
+            </div>
+            <b>
+                <em class="am-icon-plus-square-o"></em>
+            </b>
+        </a>
+    </li>
+    <li style="display: none;" class="hidden-rebate small-font">
+        <a href="#" title="年度预算申请">
+            <span eng="annual-budget">年度预算申请</span>
+        </a>
+    </li>
+    <li style="display: none;" class="hidden-rebate small-font">
+        <a href="#" title="退管会活动">
+            <span eng="rebate-activity">退管会活动</span>
+        </a>
+    </li>
+    <li>
+        <a href="#" title="信访登记">
+            <i class="am-icon-pencil"></i>
+            <span eng="letter-register">信访登记</span>
+        </a>
+    </li>
+</ul>
+
+<div data-am-widget="navbar" class="am-navbar am-cf am-navbar-default "
+     id="">
+    <ul class="am-navbar-nav am-cf am-avg-sm-5" >
+        <li >
+            <a href="info.html" class="">
+                <span class="am-icon-home "></span>
+                <span class="am-navbar-label ">消息</span>
             </a>
         </li>
         <li >
-            <a href="#" title="干部选拔">
-                <i class="am-icon-child"></i>
-                <span eng="selection-apply">干部选拔</span>
+            <a href="work.html" class="">
+                <span class="am-icon-legal "></span>
+                <span class="am-navbar-label " >工作</span>
             </a>
         </li>
-        <li>
-            <a href="#" title="活动管理">
-                <i class="am-icon-futbol-o"></i>
-                <span eng="activity-manager">活动管理</span>
+        <li >
+            <a href="#" class="">
+                <span class="am-icon-user-secret sl-icon-color-red"></span>
+                <span class="am-navbar-label sl-icon-color-red" >联系人</span>
             </a>
-        </li>
-        <li>
-            <a href="#" title="党费管理" style="display: flex;" class="sl-flex-row-center-space-between">
-                <div>
-                    <i class="am-icon-cny"></i>
-                    <span eng="money-manager">党费管理</span>
-                </div>
-                <b>
-                    <em class="am-icon-plus-square-o"></em>
-                </b>
-            </a>
-
         </li>
 
-        <li style="display: none;" class="hidden-money small-font">
-            <a href="#" title="党费缴纳">
-                <span eng="strong-big">党费缴纳</span>
-            </a>
-        </li>
-        <li style="display: none;" class="hidden-money small-font">
-            <a href="#" title="党费分摊">
-                <span eng="money-avg">党费分摊</span>
-            </a>
-        </li>
-        <li style="display: none;" class="hidden-money small-font">
-            <a href="#" title="党费可支配情况">
-                <span>党费可支配情况</span>
-            </a>
-        </li>
-        <li>
-            <a href="#" title="退管会管理" style="display: flex;" class="sl-flex-row-center-space-between">
-                <div>
-                    <i class="am-icon-suitcase"></i>
-                    <span >退管会管理</span>
-                </div>
-                <b>
-                    <em class="am-icon-plus-square-o"></em>
-                </b>
-            </a>
-        </li>
-        <li style="display: none;" class="hidden-rebate small-font">
-            <a href="#" title="年度预算申请">
-                <span eng="annual-budget">年度预算申请</span>
-            </a>
-        </li>
-        <li style="display: none;" class="hidden-rebate small-font">
-            <a href="#" title="退管会活动">
-                <span eng="rebate-activity">退管会活动</span>
-            </a>
-        </li>
-        <li>
-            <a href="#" title="信访登记">
-                <i class="am-icon-pencil"></i>
-                <span eng="letter-register">信访登记</span>
-            </a>
-        </li>
     </ul>
-
-    <div data-am-widget="navbar" class="am-navbar am-cf am-navbar-default "
-         id="">
-        <ul class="am-navbar-nav am-cf am-avg-sm-5" >
-            <li >
-                <a href="../main/main.html" class="">
-                    <span class="am-icon-home"></span>
-                    <span class="am-navbar-label">主页</span>
-                </a>
-            </li>
-            <li >
-                <a href="strong-big-input.html" class="">
-                    <span class="am-icon-legal "></span>
-                    <span class="am-navbar-label " >行政</span>
-                </a>
-            </li>
-            <li >
-                <a href="l" class="">
-                    <span class="am-icon-user-plus"></span>
-                    <span class="am-navbar-label">人事</span>
-                </a>
-            </li>
-            <li >
-                <a href="" class="">
-                    <span class="am-icon-money"></span>
-                    <span class="am-navbar-label">财政</span>
-                </a>
-            </li>
-            <li >
-                <a href="party.html" class="">
-                    <span class="am-icon-paper-plane sl-font-color-red"></span>
-                    <span class="am-navbar-label sl-font-color-red">党务</span>
-                </a>
-            </li>
-
-        </ul>
-    </div>
+</div>
 </body>
 <script>
 
@@ -180,23 +168,23 @@
 
     //定义模块索引
     $(function () {
-       sessionStorage.setItem('moduleId',0);
+        sessionStorage.setItem('moduleId',0);
     });
     //将子菜单栏右移
     var rem = new Rem();
     $(document).ready(function () {
-       $('.hidden-rebate a').addClass('sl-flex-row-center-flex-end');
-       $('.hidden-money a').addClass('sl-flex-row-center-flex-end');
-       $('ul.am-list li').each(function () {
-           $(this).css('padding','0rem')
-       })
+        $('.hidden-rebate a').addClass('sl-flex-row-center-flex-end');
+        $('.hidden-money a').addClass('sl-flex-row-center-flex-end');
+        $('ul.am-list li').each(function () {
+            $(this).css('padding','0rem')
+        })
     });
-//    //文字排版
-//    $(document).ready(function () {
-//        var rem = new Rem();
-//        rem.adapterWidth_object();
-//        rem.weiXinBrowers();
-//    });
+    //    //文字排版
+    //    $(document).ready(function () {
+    //        var rem = new Rem();
+    //        rem.adapterWidth_object();
+    //        rem.weiXinBrowers();
+    //    });
 
     //点击左边菜单，
     $("ul.am-list").children('li').click(function () {
