--- a/html/party.html
+++ b/html/party.html
@@ -300,7 +300,7 @@
 
 
     <div class="sl-flex-row-center-center sl-icon-color-CACACA" id="bottom-nav">
-        <div class="w-5 sl-flex-column-center-center" ><i class="fa fa-home" style="font-size: 1.5rem;"></i><a href="main.html" style="font-size: 0.8rem;">主页</a></div>
+        <div class="w-5 sl-flex-column-center-center" ><i class="fa fa-home" style="font-size: 1.5rem;"></i><a href="main/main.html" style="font-size: 0.8rem;">主页</a></div>
         <div class="w-5 sl-flex-column-center-center" ><i class="fa fa-legal" style="font-size: 1.5rem;"></i><a style="font-size: 0.8rem;">行政</a></div>
         <div class="w-5 sl-flex-column-center-center" ><i class="fa fa-user-plus" style="font-size: 1.5rem;"></i><a style="font-size: 0.8rem;">人事</a></div>
         <div class="w-5 sl-flex-column-center-center" ><i class="fa fa-money" style="font-size: 1.5rem;"></i><a style="font-size: 0.8rem;">财务</a></div>
